--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Pedro Morgado/Pedro Morgado/Otros/Eclipse/IAIC-P2B/lib/jess.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Pedro Morgado/Pedro Morgado/Otros/Eclipse/IAIC-P2B/lib/jsr94.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
